vanish button complite

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
             <img id="bulb-on" class="images mx-auto" src="images/pic_bulbon.gif" alt="bulbon photo">
         </div>
         <div class="text-center mt-4">
-            <button onclick="lightOnOfButton(true)" class=" btn text-white fw-bold bg-dark">Light On</button>
-            <button onclick="lightOnOfButton(false)" class=" btn text-white fw-bold bg-dark">Light Of</button>
+            <button id="on-button" onclick="lightOnOfButton(true)" class=" btn text-white fw-bold bg-dark">Light On</button>
+            <button id="of-button" onclick="lightOnOfButton(false)" class=" btn text-white fw-bold bg-dark">Light Of</button>
+            <button id="vanish-button" onclick="vanishButton()" class=" btn text-white fw-bold bg-dark">Vanish</button>
         </div>
     </main>
 
