--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
             <p id="error-message" class="text-center mt-4 bg-dark text-white w-25 p-3 mx-auto rounded-pill">❌You clicked the vanish button.</p>
             <img width="300px" id="error-img" src="images/error-photo.png" alt="">
         </div>
+
+        <div>
+            <div class="text-center mt-5">
+                <img class="rounded-pill" width="150px" src="images/developer.jpg" alt="">
+                <h3 class="text-center fw-bold hea-information">
+                    <span>Developer</span> <br>
+                    <span>Parvez Rahman</span><br>
+                    <span>Department Of Chemistry</span><br>
+                    <span>K.C.College</span>
+                </h3>
+            </div>
+        </div>
     </main>
 
     <script src="js/app.js"></script>
