--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </div>
         <div class="text-center mt-4">
             <button id="on-button" onclick="lightOnOfButton(true)" class=" btn text-white fw-bold bg-dark">Light On</button>
-            <button id="of-button" onclick="lightOnOfButton(false)" class=" btn text-white fw-bold bg-dark">Light Of</button>
+            <button disabled id="of-button" onclick="lightOnOfButton(false)" class=" btn text-white fw-bold bg-dark">Light Of</button>
            <button id="vanish-button" onclick="vanishButton()" class=" btn text-white fw-bold bg-dark">Vanish</button>
         </div>
         <div class="text-center">
             <p id="error-message" class="text-center mt-4 bg-dark text-white w-25 p-3 mx-auto rounded-pill">❌You clicked the vanish button.</p>
-            <img width="300px" id="error-img" src="images/error-photo.png" alt="">
+            <img width="300px" id="error-img" src="images/error-photo-removebg-preview.png" alt="">
         </div>
 
         <div>
